# MTGScan-py

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml
.claude/: index.json
server/: CLAUDE.md  Dockerfile  app.py  pyproject.toml  start.sh
server/data/: Keywords.json  all_cards.txt
server/static/: index.js
server/utils/: apiclient.py  oss.py  txoss.py
