[tool.poetry]
name = "mtgscan-app"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier <qpfortier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mtgscan = {git = "https://github.com/Top-Decks/MTGSCAN"}
eventlet = "^0.35.1"
celery = "^5.2.0"
Flask = "^2.3.3"
Flask-SocketIO = "^5.3.6"
redis = "^4.3.4"
oss2 = "^2.18.4"
requests = "^2.31.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
